Still changing things in ImagesSlider and in index.css to try and fix the extra white space in the looping issue

--- a/src/Form.css
+++ b/src/Form.css
@@ -289,7 +289,7 @@ fieldset {
 
 .fs-slider::-moz-range-thumb {
   background-color: var(--color-primary);
-  border: none; /* Removes extra border that FF applies */
+  border: none; 
   border-radius: 50%;
   height: 1.25rem;
   width: 1.25rem;
@@ -365,6 +365,24 @@ fieldset {
 .fs-textarea::placeholder {
   color: var(--color-text-muted);
 }
+
+
+/* Phone number styling */
+.contact-phone {
+    align-self: flex-end;  
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 10px;
+  }
+  
+  .contact-phone a {
+    color: #4f5d4f;
+    text-decoration: none;
+  }
+  
+  .contact-phone a:hover {
+    text-decoration: underline;
+  }
 
 @media (min-width: 600px) {
     .estimate-form-container {
